# TraversabilityAnalysis

./: CMakeLists.txt  package.xml
config/: camera.yaml
include/: Cell.h  DataLoader.h
launch/: custom_rs_rgbd.launch  traversability.launch
models/: test.yaml
plugins/: nodelets.xml
scripts/: data_extraction_wheel_chair.py
src/: Cylinder.cpp  DataLoader.cpp  Synchro.cpp  rosdemo.cpp  rosnodelet.cpp
