<?xml version="1.0"?>
<package format="2">
  <name>trav_analysis_2</name>
  <version>1.0.0</version>
  <description>Traversability Analysis</description>

  <maintainer email="fusarodani@dei.unipd.it">Daniel Fusaro</maintainer>

  <license>TODO</license>

  <author>Daniel Fusaro</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>

  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <build_depend>visualization_msgs</build_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <build_depend>proximity_grid</build_depend>
  <build_export_depend>proximity_grid</build_export_depend>
  <exec_depend>proximity_grid</exec_depend>

  <export>
      <nodelet plugin="${prefix}/plugins/nodelets.xml"/>
  </export>
</package>
